Komodex Module Drivers - Changelog
http://komodex.com

v1.0.0
----------
- Initial release.

v1.0.1
----------
- Fixed an issue with the SetValue(string) method of SevenSegmentDisplay.

v1.0.2
----------
- The SetBrightness method of SevenSegmentDisplay now accepts a double rather than a float.
- Added Underscore to the Digit enumeration. SetValue(string) now parses the '_' character.
- Added ClearValue method to SevenSegmentDisplay. This method clears the displayed value.

v1.0.3
----------
- Fixed some issues with negative TimeSpan values in SevenSegmentDisplay.

v1.0.4
----------
- Added XML documentation for all public members in the Seven Segment Display library.

v1.0.5
----------
- Fixed an issue with the SetValue(DateTime) method of SevenSegmentDisplay.